# automata-theory

./: .clang-format  CMakeLists.txt  min.sh
Grammar/: CMakeLists.txt  main.cpp
Grammar/input/: from_cr.gram  grammar.gram  grammar2.gram  grammar3.gram  left_grammar.gram
Minimize/: CMakeLists.txt  MealyMin.cpp  MooreMin.cpp
Minimize/input/: MealyToMin.dot  mealy_max_2.dot  mealy_min.dot  moore_max_2.dot  moore_min.dot  output_moore_2_orig.dot
Model/: Machine.cpp  Machine.h  MealyMachine.cpp  MealyMachine.h  MooreMachine.cpp  MooreMachine.h
NFA/: CMakeLists.txt  NFA.cpp
NFA/input/: from_lec.dot  moore.dot  moore_big.dot
Regular/: CMakeLists.txt  Regular.cpp
Transform/: CMakeLists.txt  main.cpp
Transform/input/: mealy.dot  moore.dot
